--- a/package.json
+++ b/package.json
@@ -8,18 +8,19 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "^10.0.0",
+    "next": "^11.1.2",
     "pako": "^2.0.4",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-toastify": "^8.0.2",
-    "styled-components": "^5.2.1"
+    "styled-components": "^5.3.1"
   },
   "devDependencies": {
-    "@types/node": "^14.14.20",
+    "@types/node": "^16.7.10",
     "@types/pako": "^1.0.2",
-    "@types/react": "^17.0.0",
+    "@types/react": "^17.0.19",
     "@types/styled-components": "^5.1.13",
-    "typescript": "^4.1.3"
+    "prettier": "^2.3.2",
+    "typescript": "^4.4.2"
   }
 }
